Add start flow bulk action in new interface

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -237,6 +237,7 @@
     -block post-header
     <!-- Content -->
     -block page-container
+      %temba-modax#shared-modax
       .flex-grow
         .page-content
           -block suspension
