--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -188,11 +188,9 @@
                               -trans "Send"
 
                         -if org_perms.flows.flow_broadcast
-                          %temba-modax#start-flow(header='{{_("Start Flow")|escapejs}}' endpoint="{% url 'flows.flow_broadcast' %}")
-                            .button-action.no-loading(onclick="handleStartFlowClicked()")
-                              .mr-2.glyph.icon-flow(style="font-size:14px")
-                              -trans "Start Flow"
-      
+                          .button-action.no-loading(onclick="handleStartFlowClicked(event)")
+                            .mr-2.glyph.icon-flow(style="font-size:14px")
+                            -trans "Start Flow"
 
                   .flex-grow.ml-1.self-end.items-end
                     .flex.flex-col.pr-12
@@ -293,16 +291,22 @@
         {% endif %}
       }
 
-      function handleStartFlowClicked() {
-        // when we click send, include any clicked messages in our modax request
+      function handleStartFlowClicked(evt) {
+
         var sendEndpoint = "{% url 'flows.flow_broadcast' %}";
-        var startModal = document.querySelector("#start-flow");
+        var startModal = document.querySelector("#shared-modax, #start-modal");
+
+        startModal.header = '{{_("Start Flow")|escapejs}}';
         var ids = getCheckedUuids();
         if (ids.length > 0) {
           startModal.setAttribute("endpoint", sendEndpoint + '?c=' + ids);
         } else {
           startModal.setAttribute("endpoint", sendEndpoint);
         }
+        startModal.open = true;
+
+        evt.preventDefault();
+        evt.stopPropagation();
       }
 
       function handleSendMessageClicked() {
