--- a/templates/gear_links_include.haml
+++ b/templates/gear_links_include.haml
@@ -88,7 +88,7 @@
         function showModax(endpoint) {
           const modax = document.querySelector("temba-modax[id='" + endpoint + "']");
           if(modax) {
-            modax.setAttribute("open", "true");
+            modax.open = true;
           }
         }
 
