--- a/templates/orgs/user_list.haml
+++ b/templates/orgs/user_list.haml
@@ -2,7 +2,7 @@
 -load i18n
 
 -block title
-  -trans "Workspaces"
+  -trans "Users"
 
 -block pre-table
   .flex.mb-4.items-center
@@ -22,33 +22,3 @@
         {% csrf_token %}
         %input(type="hidden" name="filter" value='{{ filter }}')
         %temba-textinput(name='search' value='{{ search }}')
-
--block extra-style
-  {{block.super}}
-
-  :css
-    .org-timezone, .owner-email {
-      font-size: 80%;
-    }
-
-    .plan-name {
-      text-transform: uppercase;
-      font-size: 80%;
-    }
-
-    .used-pct {
-      font-size: 80%;
-    }
-
-    #header-owner {
-
-    }
-
-    .field_created_on {
-      white-space: nowrap;
-      width: 64px;
-    }
-
-    .field_service {
-      width: 40px;
-    }
