Fix typo on archive button

--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -102,7 +102,7 @@
                           -trans "Remove Label"
 
                       - if 'archive' in actions
-                        .button-action(onclick='runActionOnObjectRows("archive, wireTableListeners)')
+                        .button-action(onclick='runActionOnObjectRows("archive", wireTableListeners)')
                           .-mt-1.mr-2.glyph.icon-box
                           -trans "Archive"
 
