--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -259,7 +259,7 @@
         // TODO: migrate to API?
         revisions: '/flow/revisions/{{object.uuid}}/',
         recents: '/flow/recent_contacts/{{object.uuid}}/',
-        attachments: '/flow/upload_media_action/{{object.uuid}}/',
+        attachments: '/flow/upload_media/{{object.uuid}}/',
         languages: base + 'language',
         environment: base + 'environment',
         activity: '/flow/activity/{{object.uuid}}/',
