--- a/templates/contacts/contact_update.haml
+++ b/templates/contacts/contact_update.haml
@@ -44,7 +44,7 @@
     });
 
     function createMoveLinks() {
-      var body = document.querySelector("#edit-contact, #gear-modax, #shared-modax").shadowRoot.querySelector(".modax-body");
+      var body = getModax("#edit-contact").shadowRoot.querySelector(".modax-body");
       $(body).find('.order-helper').remove();
 
       var idx = 0;
@@ -69,7 +69,7 @@
     }
 
     function moveUp(link) {
-      var body = document.querySelector("#edit-contact, #gear-modax, #shared-modax").shadowRoot.querySelector(".modax-body");
+      var body = getModax("#edit-contact").shadowRoot.querySelector(".modax-body");
       var group = $(body).find('#' + link).parents('.control-group');
       var previous = group.prev();
       previous.before(group);
