--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -259,7 +259,7 @@
         // TODO: migrate to API?
         revisions: '/flow/revisions/{{object.uuid}}/',
         recents: '/flow/recent_contacts/{{object.uuid}}/',
-        attachments: '/media/upload/',
+        attachments: '{% url "msgs.media_upload" %}',
         languages: base + 'language',
         environment: base + 'environment',
         activity: '/flow/activity/{{object.uuid}}/',
