Switch manage to look for is_staff, add org read page for staff

--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -89,7 +89,7 @@
 
 -block subtitle
   .summary.-mt-2
-    %temba-contact-groups(contact="{{object.uuid}}")
+    %temba-contact-badges(contact="{{object.uuid}}")
     
 -block content
 
