--- a/templates/orgs/user_list.haml
+++ b/templates/orgs/user_list.haml
@@ -21,3 +21,4 @@
       %form#search-form(method='get')
         %input(type="hidden" name="filter" value='{{ filter }}')
         %temba-textinput(name='search' value='{{ search }}')
+        %input.hidden(type="submit" value="Submit")
