--- a/templates/msgs/message_box_spa.haml
+++ b/templates/msgs/message_box_spa.haml
@@ -12,7 +12,7 @@
       .flex.flex-col
         %form#search-form(method="get")
           %temba-textinput.w-full(placeholder='{% trans "Search" %}' name="search" value="{{search}}")
-          %input.hide(type="submit")
+          %input.hidden(type="submit" value="Submit")
 
 
   .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
