--- a/templates/orgs/org_manage.haml
+++ b/templates/orgs/org_manage.haml
@@ -26,8 +26,14 @@
   {{block.super}}
 
   :css
-    .org-timezone, .owner-email {
+    .org-timezone, .owner-email, .org-plan {
       font-size: 80%;
+      color: #999;
+    }
+
+    a:hover, a:hover * {
+      text-decoration: none;
+      color: var(--color-link-primary);
     }
 
     .plan-name {
