--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -16,6 +16,8 @@
     %meta{http-equiv:"X-UA-Compatible", content:"IE=10"}
 
     -if user.is_staff
+      %script(src="{{ STATIC_URL }}js/urls.js")
+
       :javascript
         window.STATIC_URL = "{{STATIC_URL}}";
         function loadNewInterface(force) {
