some cleanup based on what is needed for old vs. new interface
- new interface "Manage Logins" title is set via the views.py title def
- old interface "Manage Logins" title is set via the org_manage_accounts.haml
- given this, org_manage_accounts.haml would be a good candidate to delete/remove as it only contains a `block page-title` which isn't currently being used anywhere (yet?)

--- a/templates/orgs/org_manage_accounts.haml
+++ b/templates/orgs/org_manage_accounts.haml
@@ -2,10 +2,7 @@
 -load smartmin temba compress i18n
 
 -block title
-  -if parent
-    {{org.name}}
-  -else
-    {{user_org.name|capfirst}}
+  -trans "Manage Logins"
 
 -block extra-style
   {{block.super}}
