--- a/templates/channels/channellog_msg.haml
+++ b/templates/channels/channellog_msg.haml
@@ -1,16 +1,32 @@
--extends "smartmin/read.html"
+-extends "smartmin/list.html"
 -load i18n compress
 
--block page-title
-  -trans "Channel Event"
-
 -block title
-  -trans "Channel Log"
-
--block subtitle
-  {{ object.channel.get_channel_type_display }}
+  -trans "Message Log"
 
 -block content
+  .card.flex.mt-0.flex-shrink-0
+    .inline-flex.mr-8
+      .font-normal.mr-2
+        -trans "Recipient"
+      %temba-anchor(href='{% url "contacts.contact_read" msg.contact.uuid %}')
+        {{ msg.contact_urn.get_display }}
+
+    .inline-flex.mr-8
+      .font-normal.mr-2
+        -trans "Direction"
+      {{ msg.get_direction_display }}
+
+    .inline-flex.mr-8
+      .font-normal.mr-2
+        -trans "Date"
+      {% format_datetime msg.created_on seconds=True %}
+
+    .inline-flex.mr-8
+      .font-normal.mr-2
+        -trans "Status"
+      {{ msg.get_status_display }}
+
   -for log in http_logs
     -include "includes/http_log.haml" with log=log
 
