--- a/templates/msgs/tags/channel_log_link.haml
+++ b/templates/msgs/tags/channel_log_link.haml
@@ -1,3 +1,3 @@
 -if log
-  .hover-linked{onclick:"goto(event)", href:"{% url 'channels.channellog_read' log.channel.uuid log.id %}"}
+  .hover-linked{onclick:"goto(event)", href:"{% url 'channels.channellog_read' log.id %}"}
     .icon-docs-2.pointer-events-none
