--- a/templates/msgs/message_box_spa.haml
+++ b/templates/msgs/message_box_spa.haml
@@ -52,7 +52,7 @@
                     -block message_time
                       {% short_datetime object.created_on %}
 
-                  -if show_channel_logs and not user_org.is_anon or perms.contacts.contact_break_anon
+                  -if show_channel_logs and not user_org.is_anon or user.is_staff
                     .inline-block.text-gray-400.linked.ml-3
                       {% channel_log_link object %}
 
