--- a/templates/msgs/msg_outbox.haml
+++ b/templates/msgs/msg_outbox.haml
@@ -44,7 +44,7 @@
             %span.time
               {% short_datetime object.created_on %}
 
-            -if show_channel_logs and not user_org.is_anon or perms.contacts.contact_break_anon
+            -if show_channel_logs and not user_org.is_anon or user.is_staff
               .inline-block.text-gray-400.linked
                 {% channel_log_link object %}
 
