--- a/templates/channels/channellog_read.haml
+++ b/templates/channels/channellog_read.haml
@@ -11,8 +11,7 @@
   {{ object.channel.get_channel_type_display }}
 
 -block content
-  -for log in http_logs
-    -include "includes/http_log.haml" with log=log
+  -include "channels/channellog.haml" with log=log
 
 -block extra-script
   {{ block.super }}
@@ -52,7 +51,7 @@
   -compress css inline
     {% lessblock %}
       :plain
-        table.list {
+        table.http-log {
           tbody {
             tr:first-child {
               td {
