Add anon-display field to API contact results if org is anon and make urn display null

--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -121,7 +121,7 @@
           %td.w-full
             .contact-field
               .contact-field-value
-                {{contact.anon_identifier}}
+                {{contact.anon_display}}
   
     
       -for field in all_contact_fields
