Add temba-tabs and temba-run-list to flow results page

--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -109,7 +109,7 @@ html {
   --button-font-size: 1.125rem;
 
   --icon-color: var(--text-color);
-  --icon-color-circle-hover: rgb(245, 245, 245);
+  --icon-color-circle-hover: rgba(245, 245, 245, .8);
   
   --transition-speed: 250ms;
   --event-padding: 0.5em 1em;
