--- a/templates/flows/flow_results_spa.haml
+++ b/templates/flows/flow_results_spa.haml
@@ -66,7 +66,7 @@
           width: 33% !important;
         }
 
-        .chart .name {
+        .chart .chart-name {
           padding-left: 50px;
           padding-right: 50px;
           font-size: 16px;
@@ -249,6 +249,13 @@
     %script(src="{{ STATIC_URL }}bower/highcharts/modules/drilldown.js")
 
   :javascript
+
+    var colors = Highcharts.getOptions().colors;
+    function getColor(index) {
+      return colors[index % colors.length];
+    }
+
+    var charts = {}
     function handleFlowRefreshed(evt) {
       var flow = evt.detail.data;
       if (flow.runs) {
@@ -293,21 +300,242 @@
       }
     }
 
-    
+    function getChart(key, name) {
+      var chart = charts[key];
+      if (!chart) {
+
+        // add our chart container
+        var ele = document.querySelector(".chart-template").cloneNode(true);
+        ele.classList = "chart";
+        ele.querySelector(".chart-container").id = key + "-chart";
+        ele.querySelector(".chart-name").innerText = name;
+        document.querySelector("#category-charts").append(ele);
+
+        // init with highcharts
+        chart = Highcharts.chart(key + '-chart', {
+          chart: {
+              type: 'column',
+              margin: [25, 25, 90, 25]
+          },
+          title: {
+              text: null
+          },
+          credits: {
+             enabled: false
+          },
+          yAxis: {
+            min: 0,
+            max: 100,
+            lineWidth: 0,
+            minorGridLineWidth: 0,
+            lineColor: 'transparent',
+            minorTickLength: 0,
+            tickLength: 0,
+            gridLineColor: '#f2f2f2',
+            labels: {
+              enabled: false
+            },
+            title: {
+              text: null
+            }
+          },
+          xAxis: {
+            categories: [],
+
+            title: {
+              text: null
+            },
+            labels: {
+              enabled: true
+            },
+          },
+          tooltip: {
+            formatter: function() {
+              return "<b>" + this.x + "</b>: " + this.point.count;
+            }
+          },
+          series: []
+        });
+      }
+
+      charts[key] = chart;
+      return chart;
+    }
+
+    function updateChart(chartData) {
+      var key = chartData.key;
+      var chart = getChart(key, chartData.name);
+      var seriesData = [];
+      var labels = [];
+      var totalPct = 0;
+      for (var category of chartData.categories) {
+        pointLabels = {}
+        pointLabels.enabled = true;
+        pointLabels.color = "#fff";
+        pointLabels.x = 0;
+        pointLabels.y = 0;
+        pointLabels.format = "{point.y}%";
+
+        pct = parseInt(category.pct * 100);
+
+        if (pct > 15) {
+          pointLabels.y = 25;
+        }
+
+        seriesData.push({name: category.name, count: category.count, y: pct, dataLabels: pointLabels});
+      }
+
+      seriesData.sort(function(a, b) {
+        if (a.name == 'Other') {
+          return 1;
+        } else if (b.name == 'Other') {
+          return -1;
+        }
+        return b.count - a.count;
+      });
+
+      for (var idx in seriesData) {
+        labels.push(seriesData[idx].name);
+        var color = getColor(idx);
+        if (seriesData[idx].name == 'Other') {
+          color = '#999';
+        }
+        seriesData[idx].color = color;
+      }
+
+      var series = { name: chartData.name, showInLegend: false, data: seriesData};
+
+      if (chart.series.length == 0) {
+        chart.addSeries(series);
+      } else {
+        chart.series[0].setData(seriesData, true);
+      }
+
+      chart.xAxis[0].update({categories:labels});
+
+      // on larger series make sure we are wide
+      var size = chartData['size'];
+      if (size) {
+        var ele = document.querySelector("#" + key + "-chart");
+        if (ele) {
+          ele.classList.add(size);
+        }
+        chart.reflow();
+        window.dispatchEvent(new Event('resize'));
+      }
+    }
+
+    function chartLayoutChanged(counts) {
+      var keys = Object.keys(charts);
+      if (counts.length != keys.length) {
+        return true;
+      }
+
+      // check if order changed
+      for (var i=0; i<counts.length; i++) {
+        if (counts[i]['key'] != keys[i]) {
+          return true;
+        }
+      }
+      return false;
+    }
+
+    function resetCharts() {
+
+      var cats = document.querySelector("#category-charts");
+      while (cats.firstChild) {
+        cats.removeChild(cats.firstChild);
+      }
+
+      for (var key in charts){
+        charts[key].destroy();
+      }
+      charts = {};
+    }
+
+    function updatePreviousCharts(from, to, counts) {
+      var chartCount = to - from;
+      if (chartCount % 3 == 0) {
+        for (var j=from; j < to; j++) {
+          counts[j]['size'] = 'small';
+        }
+      } else if (chartCount == 1) {
+        counts[to-1]['size'] = 'large';
+      }
+    }
+
+    function updateCharts() {
+
+      var store = document.querySelector("temba-store");
+      var tabs = document.querySelector("temba-tabs");
+
+      if (tabs.index != 1) {
+        return;
+      }
+
+      store.getUrl("/flow/category_counts/{{object.uuid}}/", { force: true }).then(function(response){
+        var data = response.json;
+
+        if (data.counts) {
+          // determine chart sizes
+          var lastBigChart = -1;
+          for (var i=0; i<data.counts.length; i++) {
+            data.counts[i]['size'] = 'medium';
+            if (data.counts[i].categories.length > 5) {
+              data.counts[i]['size'] = 'large';
+              updatePreviousCharts(lastBigChart + 1, i, data.counts);
+              lastBigChart = i;
+            }
+          }
+
+          if (lastBigChart != data.counts.length - 1) {
+            updatePreviousCharts(lastBigChart + 1, i, data.counts);
+          }
+
+          if (chartLayoutChanged(data.counts)) {
+            resetCharts();
+          }
+
+          for (var chartData of data.counts) {
+            updateChart(chartData);
+          }
+        }
+      });
+
+      window.setTimeout(function() {
+        updateCharts();
+      }, 5000);
+    }
+
+    function handleTabChanged() {
+      var tabs = document.querySelector("temba-tabs");
+
+      // runs are paused unless our tab is active
+      var runs = document.querySelector("temba-run-list");
+      runs.paused = tabs.index != 2;
+
+      if (tabs.index == 1) {
+        updateCharts();
+      }
+    }
+
 
 -block content
 
+  .chart-template
+    .chart-name
+    .chart-container
+
   %temba-flow-details(flow="{{object.uuid}}"  -temba-refreshed="handleFlowRefreshed")
 
-  %temba-tabs.flex-grow
-
+  %temba-tabs.flex-grow(-temba-context-changed="handleTabChanged")
 
     %temba-tab(name='{{_("Overview")|escapejs}}')
       .text-center{ic-get-from:'/flow/activity_chart/{{object.id}}', ic-trigger-on:'load'}
 
 
-    %temba-tab(name='{{_("Analytics")|escapejs}}')
-      #category-charts
+    %temba-tab(name='{{_("Analytics")|escapejs}}' icon="bar-chart")
+      #category-charts.overflow-y-scroll.overflow-x-hidden
 
     %temba-tab(name='{{_("Runs")|escapejs}}')
       %temba-run-list.p-4.flex.flex-col.flex-grow.overflow-hidden(flow="{{object.uuid}}" -temba-refreshed="handleRunsRefreshed")
