--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -266,6 +266,7 @@
 
   %script(src="{{ STATIC_URL }}js/labels.js?4")
   %script(src="{{ STATIC_URL }}bower/highcharts/highcharts.js")
+  %script(src="{{ STATIC_URL }}bower/highcharts/modules/drilldown.js")
 
   -include "full_page_script.haml"
 
