A few ui tweaks  * Fix history state on tickets and contacts  * Update footer  * Fix channel log links to include channel  * Add download icons for archives  * Fix create flow modal opener  * Flow editor embed styling

--- a/templates/channels/channellog_list_spa.haml
+++ b/templates/channels/channellog_list_spa.haml
@@ -45,7 +45,7 @@
                 -trans "Channel interaction"
             %td
               -if obj.msg
-                .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_msg" obj.msg.id %}')
+                .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_msg" obj.channel.uuid obj.msg.id %}')
                   {{obj.get_description}}
               -elif obj.connection
                 .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_call" obj.connection.id %}')
