--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -77,7 +77,7 @@
 
     function handleTabChanged() {
       var tab = document.querySelector("temba-tabs").index;
-      window.history.replaceState(null, null, "?tab=" + tab);
+      window.history.replaceState({ url:"{% url 'contacts.contact_read' object.uuid %}", show: window.location.pathname + "?tab=" + tab }, "", "?tab=" + tab);
     }
 
     function handleFieldSearch(evt) {
