--- a/templates/flows/flow_create.haml
+++ b/templates/flows/flow_create.haml
@@ -23,7 +23,7 @@
 
   :javascript
 
-    var modalBody = document.querySelector("#create-flow-modal").shadowRoot;
+    var modalBody = getModax("#create-flow-modal").shadowRoot;
     var typeSelect = modalBody.querySelector("temba-select[name='flow_type']");
     var keywords = modalBody.querySelector(".keywords");
     var keywordsSelect = modalBody.querySelector("temba-select[name='keyword_triggers']");
