--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -3,7 +3,6 @@
 
 -block page-top
 -block header
--block footer
 
 -block auto-route
   :javascript
@@ -18,6 +17,9 @@
   {{block.super}}
 
   :css
+    temba-menu > div {
+      display: none;
+    }
     .shadow {
       --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 40px 0 rgba(0, 0, 0, 0.09);
     }
@@ -254,10 +256,15 @@
       margin-right: 0 !important;
     }
 
+    .spa-content {
+      margin-bottom: -2em;
+      padding-bottom: 2em;
+    }
+    
     .spa-footer {
-      background: rgba(0,0,0,.05);
-      padding: 18px;
-      
+      margin-bottom: 2.5em;
+      padding-top: 0.5em;
+
     }
 }
 
@@ -551,7 +558,7 @@
     
     window.addEventListener("popstate", function (event){
       let state = event.state;
-      if (state) {
+      if (state && state.url && state.show) {
         showLoading();
         gotoURL(state.url, state.show, false, true);
         var menu = document.querySelector("temba-menu");
@@ -671,7 +678,6 @@
     var toMap = /(msg|contact|flow|ticket|channels|triggers|campaign|org|user|settings).*/;
 
     function handleNoPath(event) {
-
       var details = event.detail;
       var menu = document.querySelector("temba-menu");
 
@@ -697,7 +703,7 @@
     }
 
     function fetchURL(url, triggerEvents) {
-
+ 
       showLoading();
       var refererPath = window.location.pathname;
       window.lastFetch = url;
@@ -767,15 +773,17 @@
     }
 
 -block temba-store
-  %temba-store(
-    completion="/mr/docs/{{ LANGUAGE_CODE }}/editor.json"
-    languages="/org/languages/"
-    fields="/api/v2/fields.json"
-    globals="/api/v2/globals.json"
-    groups="/api/v2/groups.json"
-    workspace="/api/v2/workspace.json"
-  )
-      
+  -if org
+    %temba-store(
+      completion="/mr/docs/{{ LANGUAGE_CODE }}/editor.json"
+      languages="/org/languages/"
+      fields="/api/v2/fields.json"
+      globals="/api/v2/globals.json"
+      groups="/api/v2/groups.json"
+      workspace="/api/v2/workspace.json"
+    )
+   
+
 -block page-container
   -include "includes/frame_top.html"
   %temba-modax#shared-modax
@@ -786,17 +794,38 @@
     .flex.widget-container(style="height:100vh;overflow:hidden")
       .folders       
         %temba-menu(style="height:100%" endpoint="{% url 'orgs.org_menu' %}" onchange="handleMenuChanged(event)" wait="true" -temba-no-path="handleNoPath(event)" -temba-ready="handleMenuReady")
+          -block menu-header
+
       .flex-grow.spa-container.flex.flex-col
         .spa-loader.hide.absolute
           .wrapper(style="display:flex;z-index:100000;margin-top:2px;")
             %temba-loading(size=20 units=6)
         .spa-content.p-5.overflow-y-auto.overflow-x-hidden
 
-        .spa-footer.text-center.text-gray-400.hide
-          Copyright © 2012-2022 TextIt
+        -block footer
+          .spa-footer.text-center.text-gray-500.mt-4
+            :plain
+              <!--
+                This software is licensed under AGPL v3. Please review the full license:
+                https://github.com/rapidpro/rapidpro/blob/main/LICENSE
+                
+                WARNING!
+
+                Hey, we get it. This is neat software, and it would be great to slap
+                the name of your company on it. While you can copyright your modifications,
+                which they themselves require careful consideration of the AGPL license,
+                you cannot claim copyright for work that is not yours. Any modified source code
+                must be shared publicly. Any related copyrights of such work much make notice
+                that it is based on this AGPL software, and also include the below notice.
+                
+                DO NOT illegally claim copyright of this work. If you want to edit the 
+                presentation of the below copyright, please contact us at legal@textit.com 
+                to discuss attribution requirements for this software.
+              -->
+              Copyright © 2012-2022 TextIt, UNICEF
   
   .bottom-strip.absolute.bottom-0.text-sm.text-center.text-white.p-1(style="background:rgba(0,0,0,.7); z-index:100000;width:100%;")
     Go back to the
-    %span.linked(onclick="leaveNewInterface()")<
+    %span.linked(onclick="leaveNewInterface()" style="color:#43b1ff")<
       old interface
       
