--- a/templates/channels/channellog_list_spa.haml
+++ b/templates/channels/channellog_list_spa.haml
@@ -48,7 +48,7 @@
                 .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_msg" obj.channel.uuid obj.msg.id %}')
                   {{obj.get_description}}
               -elif obj.connection
-                .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_call" obj.connection.id %}')
+                .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_call" obj.connection.channel.uuid obj.connection.id %}')
                   {{obj.get_description}}
               -else
                 .hover-linked(onclick="goto(event)" href='{% url "channels.channellog_read" obj.id %}')
